# Budongsan

./: .gitignore  README.md  WORK_LOG_2026-02-06.md  docker-compose.yml  main.py  pyproject.toml  run_interactive.py  run_quick_test.py  run_scenarios.py  run_web.py  scenario_data.json  scenario_report.txt  test_all_features.py  test_depreciation.py
.claude/: claude.md
docs/: behavior_model.md  experiment_report.md  model_assumptions.md  progress_log.md  references.md  review_logical_issues.md
src/realestate/: __init__.py  agents.py  config.py  houses.py  jobs.py  macro.py  market.py  order_book.py  simulation.py  supply.py  visualization.py
src/realestate_abm/: __init__.py  __main__.py
src/realestate_abm/agents/: __init__.py  cognitive.py  decisions.py  emotions.py  memory.py  perception.py  population.py  thinking.py
src/realestate_abm/config/: __init__.py  defaults.py  loader.py  schema.py
src/realestate_abm/core/: events.py  types.py
src/realestate_abm/geography/: __init__.py  distance.py  world.py
src/realestate_abm/housing/: __init__.py  stock.py  supply.py
src/realestate_abm/institutions/: __init__.py  labor.py  lending.py  monetary.py  policy_timeline.py  tax.py
src/realestate_abm/macro/: __init__.py  economy.py
src/realestate_abm/markets/: __init__.py  housing_market.py  order_book.py  price_engine.py  rental_market.py
src/realestate_abm/presets/: __init__.py
web/backend/: Dockerfile  main.py  requirements.txt  schemas.py  sim_runner.py
web/frontend/: Dockerfile  index.html  package-lock.json  package.json
web/frontend/src/: App.css  (+1 more)
(+24 files in other folders)
